Caused by the group edit dialog being run synchronously
Description
Description
Details
Details
Revisions and Commits
Revisions and Commits
rKLEOPATRA Kleopatra | |||
rKLEOPATRAcfefc4f73363 Fix regression that groups are not saved after editing them | |||
rKLEOPATRA50994ffe915c Fix regression that groups are not saved after editing them | |||
rKLEOPATRAa38515deb792 Run groups edit dialog asynchronously | |||
rKLEOPATRA3d558a241d56 Run groups edit dialog asynchronously | |||
rKLEOPATRA8a7216ef4d6e Run groups edit dialog asynchronously | |||
rKLEOPATRA8b59bfb0a037 Run groups edit dialog asynchronously | |||
rKLEOPATRA7c82ad7a149f Run groups edit dialog asynchronously | |||
rKLEOPATRAc8751e03d33a Run groups edit dialog asynchronously | |||
rKLEOPATRA8e71a0b06b3a Run groups edit dialog asynchronously |
Status | Assigned | Task | ||
---|---|---|---|---|
Open | • TobiasFella | T6916 Kleopatra group related improvements | ||
Resolved | • TobiasFella | T7233 Kleopatra: Certificate details dialog non-interactible when opened from group edit dialog |
Event Timeline
Comment Actions
The changes broke saving of groups after editing. See T7181#190402 and T7181#190448. -> T7268: Kleopatra: Existing groups are not saved after editing them