Fix regression that groups are not saved after editing them

Fixes-commit: 3d558a241d56b781ae51e20b4cc7262c73a3f812
GnuPG-bug-id: 7233